fixing alignment on element for singular product page

--- a/css/fjordflex-pro-jacket.css
+++ b/css/fjordflex-pro-jacket.css
@@ -54,7 +54,7 @@
 
 .card__content {
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   justify-content: center;
 }
 
